--- a/about.html
+++ b/about.html
@@ -88,18 +88,26 @@
 	left: 0;
 	top: 20px;
 	background-color: rgba(4,69,87,0.8);
-	padding: 20px 30px 20px 20%;
+	padding: 20px 30px 20px 0;
 	text-align: right;
 }
 .slide2 .content2{
 	right: 0;
 	bottom: 20px;
 	background-color: rgba(174,195,64,0.8);
-	padding: 20px 20% 20px 30px;
+	padding: 20px 0 20px 30px;
 }
 .slide2 .content .cont2{
 	font-size: 16px;
 	line-height: 25px;
+}
+.slide2 .split{
+	display: inline-block;
+    width: 6px;
+    height: 6px;
+    background-color: #fff;
+    border-radius: 3px;
+    margin: 0 5px;
 }
 .slide3 .content-column{
 	width: 70%;
@@ -186,15 +194,16 @@
 					<div class="content content1 animated" data-my-animate="fadeInLeft">
 						<h3 class="animated ani-time2" data-my-animate="fadeInLeft">
 							<div class="cont1">使命</div>
-							<div class="cont2">为用户、供应商、员工、股东和社会创造
-								共赢的生态系统，成为受人尊敬的企业</div>
+							<div class="cont2">为用户、供应商、员工、股东和社会创造</div>
+							<div class="cont2">共赢的生态系统，成为受人尊敬的企业</div>
 						</h3>
 					</div>
 					<div class="content content2 animated" data-my-animate="fadeInRight">
 						<h3 class="animated ani-time2" data-my-animate="fadeInRight">
 							<div class="cont1">价值观</div>
-							<div class="cont2">同创共享 /正确行事/追求成功/一次到位
-									加快步伐/“我们”大于“我”/任人唯贤</div>
+							<div class="cont2"><span>同创共享</span><span class="split"></span><span>正确行事</span><span class="split"></span>
+								<span>追求成功</span><span class="split"></span><span>一次到位 加快步伐</span></div>
+							<div class="cont2"><span>"我们"大于"我"</span><span class="split"></span><span>任人唯贤</span></div>
 						</h3>
 					</div>
 				</div>
@@ -351,6 +360,53 @@
 											</div>
 										</div>
 									</div>
+									<div class="slide">
+											<div class="key-block" style="margin-bottom:0px;">
+												<div class="inner-box box1">
+													<div class="icon-box"></div>
+													<div class="content">
+														<h3 style="color:rgba(191,215,50,1)">2003年</h3>
+														<div class="text">江森自控、延锋江森、博奥集团正式签定三方合资协议，成立合资公司重庆延锋江森。</div>
+													</div>
+												</div>
+											</div>
+											<div class="key-block" style="margin-bottom:0px">
+												<div class="inner-box">
+													<div class="icon-box"></div>
+													<div class="content">
+														<h3 style="color:rgba(191,215,50,1)">2004年</h3>
+														<div class="text">搬迁至渝北工厂，第一个项目福特CD132正式投产。</div>
+													</div>
+												</div>
+											</div>
+											<div class="key-block" style="margin-bottom:0px">
+												<div class="inner-box">
+													<div class="icon-box"></div>
+													<div class="content">
+														<h3 style="color:rgba(191,215,50,1)">2006年</h3>
+														<div class="text">铃木工区正式投产，重庆延锋江森荣获“重庆市高新技术企业称号”。</div>
+													</div>
+												</div>
+											</div>
+											<div class="key-block">
+												<div class="inner-box">
+													<div class="icon-box"></div>
+													<div class="content">
+														<h3 style="color:rgba(191,215,50,1)">2007年</h3>
+														<div class="text">举办第一届家属日活动，启动公益项目蓝天计划。</div>
+													</div>
+												</div>
+											</div>
+											<div class="key-block" style="margin-bottom:0px">
+												<div class="inner-box">
+													<div class="icon-box"></div>
+													<div class="content">
+														<h3 style="color:rgba(191,215,50,1)">2010年</h3>
+														<div class="text">公司年销售额首次突破10亿元，技术中心获得第一项技术专利。</div>
+													</div>
+												</div>
+											</div>
+										</div>
 								</div>
 							</div>
 						</div>
