--- a/culture.html
+++ b/culture.html
@@ -177,9 +177,9 @@
     left: 52%;
 }
 .section5 .content2 .cont1{
-	font-size: 18px;
+	font-size: 24px;
     font-weight: 600;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 .section5 .cont-text2{
 	overflow: hidden;
@@ -440,9 +440,11 @@
 			<h2 class="wow fadeInLeft">做企业<font class="my-color2">就是做文化</font></h2>
 			<div class="content">
 				<div class="item-box item1">
-					<img src="images/culture/4-2.jpg">
-					<div class="my-all-center my-color2" style="margin-top: -60px;font-size:18px">此片献给正在为梦想而奋斗的您</div>
-					<img class="my-all-center icon-play" src="images/icons/play.png">
+					<a href="video/whll.mp4" class="lightbox-image play-box">
+						<img src="images/culture/4-2.jpg">
+						<div class="my-all-center my-color2" style="margin-top: -60px;font-size:18px">此片献给正在为梦想而奋斗的您</div>
+						<img class="my-all-center icon-play" src="images/icons/play.png">
+					</a>
 				</div>
 				<div class="item-box item2 my-bg-color3">
 					<div class="cont1"><img src="images/culture/4-3.jpg"></div>
@@ -483,10 +485,10 @@
 							我们更加关怀环境保护和社会责任。因此，基于环保、社区责任和员工领导力三重底线的蓝天计划应运而生。
 					</div>
 					<div class="cont-text2">
-						<div>/////////////////////////////////////////////////////////////////////////////////////</div>
-						<div>/////////////////////////////////////////////////////////////////////////////////////</div>
-						<div>/////////////////////////////////////////////////////////////////////////////////////</div>
-						<div>/////////////////////////////////////////////////////////////////////////////////////</div>
+						<div>///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////</div>
+						<div>///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////</div>
+						<div>///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////</div>
+						<div>///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////</div>
 					</div>
 				</div>
 			</div>
