--- a/profession.html
+++ b/profession.html
@@ -149,7 +149,7 @@
 }
 .section5 .content1{
 	position: relative;
-	flex: 4;
+	width: 40%;
 }
 .section5 .content1>div{
 	border-left: 2px solid;
@@ -165,7 +165,7 @@
 }
 .section5 .content2{
 	position: relative;
-	flex: 6;
+	width: 60%;
 }
 .section5 .content2 .cont1{
 	position: absolute;
@@ -357,12 +357,17 @@
 }
 
 .section8{
-	display: flex;
-	justify-content: space-between;
+	position: relative;
 	margin-bottom: 10px;
 }
+.section8 .slide{
+	/* display: flex;
+	justify-content: space-between; */
+	/* width: 50%; */
+	position: relative;
+}
 .section8 .content{
-	width: 49.9%;
+	/* width: 49.9%; */
 }
 
 </style>
@@ -437,21 +442,29 @@
 		</div>
 	</section>
 	<section class="main-slider welcome-section section5 my-font2" data-item="5" style="padding:0;margin-top:20px">
-		<div class="main-slider-carousel owl-carousel owl-theme">
-			<div class="slide">
-				<div class="content">
-					<div class="content1 wow fadeInDown100">
-						<div class="my-all-center">
-							<div class="cont1 font1 my-color5">学习与发展原则</div>
-							<div class="cont2">员工发展的表现来源于个人在职业生涯中的改变、适应以及成长能力。
-								重庆延锋安道拓注重实时地在现实生活中学习的价值，从而使个人能满足充满挑战和变化的工作要求。
-							</div>
-							<div class="cont3 my-color5">公司对于员工个人学习和发展遵从</div>
-							<div class="cont4 font4 my-color5">三个基本原则</div>
-						</div>
+		<div class="content">
+			<div class="content1 wow fadeInDown100">
+				<div class="my-all-center">
+					<div class="cont1 font1 my-color5">学习与发展原则</div>
+					<div class="cont2">员工发展的表现来源于个人在职业生涯中的改变、适应以及成长能力。
+						重庆延锋安道拓注重实时地在现实生活中学习的价值，从而使个人能满足充满挑战和变化的工作要求。
 					</div>
-					<div class="content2 wow fadeInUp100 ani-time3">
+					<div class="cont3 my-color5">公司对于员工个人学习和发展遵从</div>
+					<div class="cont4 font4 my-color5">三个基本原则</div>
+				</div>
+			</div>
+			<div class="content2 wow fadeInUp100 ani-time3">
+				<div class="main-slider-carousel owl-carousel owl-theme">
+					<div class="slide">
 						<img src="images/profession/5-1.jpg">
+						<div class="cont1 my-color5">干中学</div>
+					</div>
+					<div class="slide">
+						<img src="images/profession/5-2.jpg">
+						<div class="cont1 my-color5">干中学</div>
+					</div>
+					<div class="slide">
+						<img src="images/profession/5-3.jpg">
 						<div class="cont1 my-color5">干中学</div>
 					</div>
 				</div>
@@ -523,7 +536,7 @@
 		<div class="content2 my-color1">
 			<div class="cont-box wow fadeInRight ani-time2">
 				<div class="cont1 font1 my-color2">CQYFAS专业学院</div>
-				<div class="cont2">重庆延锋安道拓专业学院于2015年成立，旨在系统化的提示员工的专业能力，
+				<div class="cont2">重庆延锋安道拓专业学院于2015年成立，旨在系统化的提升员工的专业能力，
 					在建立技术人才梯队的同时，激励和发挥高级专业人才的带头引领作用。
 				</div>
 				<div class="cont3">目前设13大专业学院：</div>
@@ -636,9 +649,21 @@
 			</div>
 		</div>
 	</section>
-	<section class="welcome-section section8 my-color1" data-item="8" style="padding:0">
-		<div class="content wow fadeInLeft"><img src="images/profession/8-1.jpg"></div>
-		<div class="content wow fadeInRight"><img src="images/profession/8-2.jpg"></div>
+	<section class="main-slider welcome-section section8 my-color1" data-item="8" style="padding:0">
+			<div class="my-slider-carousel owl-carousel owl-theme">
+				<div class="slide">
+					<div class="content wow fadeInUp100"><img src="images/profession/8-1.jpg"></div>
+				</div>
+				<div class="slide">
+					<div class="content wow fadeInUp100"><img src="images/profession/8-2.jpg"></div>
+				</div>
+				<div class="slide">
+					<div class="content wow fadeInUp100"><img src="images/profession/8-3.jpg"></div>
+				</div>
+				<div class="slide">
+					<div class="content wow fadeInUp100"><img src="images/profession/8-4.jpg"></div>
+				</div>
+			</div>
 	</section>
 	
 
