--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 	font-size: 28px;
 	font-weight: 600;
 }
+.font3{
+	font-size: 32px;
+	font-weight: 600;
+}
 #index ul{
 	opacity: 1;
     visibility: visible;
@@ -44,6 +48,9 @@
     width: 40%;
     top: 15%;
     margin-left: 40%;
+}
+#index .china-map .region-list{
+	display: none;
 }
 #index .china-map img{
 	width: 100%;
@@ -240,78 +247,78 @@
 				</div>
 			</div>
 			<!--第5屏-->
-			<div class="swiper-slide slide5 my-font2">
+			<div class="swiper-slide slide5 my-font3">
 				<img class="slide-bg global-map" src="images/background/bg-4.jpg">
 				<div class="content-box">
 					<div class="china-map">
 						<img class="img-map" src="images/background/map_black_bg.png">
-						<div class="region-list active postition-1 online-node">
+						<div class="region-list active postition-1 online-node" data-num="9">
 							<div class="area-box">
 								<span class="dot"><img src="images/icons/marker1.png"></span>
 							</div>
 							<div class="show-regin"><span>成都</span></div>
 						</div>
-						<div class="region-list color1 active postition-2 online-node">
+						<div class="region-list color1 active postition-2 online-node" data-num="1">
 							<div class="area-box"><span class="dot"><img src="images/icons/marker2.png"></span>
 							</div>
 							<div class="show-regin"><span>重庆</span></div>
 						</div>
-						<div class="region-list color1 postition-2-1 online-node" data-type="重庆江津">
+						<div class="region-list color1 postition-2-1 online-node" data-num="6" data-type="重庆江津">
 							<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span>
 							</div>
 							<div class="show-regin"></div>
 						</div>
-						<div class="region-list color1 postition-2-2 online-node" data-type="重庆鱼嘴大门">
+						<div class="region-list color1 postition-2-2 online-node" data-num="7" data-type="重庆锋奥汽车部件">
 							<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span>
 							</div>
 							<div class="show-regin"></div>
 						</div>
-						<div class="region-list active postition-3 online-node">
+						<div class="region-list active postition-3 online-node" data-num="5">
 							<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span>
 							</div>
 							<div class="show-regin"><span>南昌</span></div>
 						</div>
-						<div class="region-list waite postition-4 waite-node">
+						<div class="region-list waite postition-4 waite-node" data-num="3">
 							<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span>
 								</div>
 							<div class="show-regin"><span>东莞</span></div>
 						</div>
-						<div class="region-list waite postition-5 waite-node">
+						<div class="region-list waite postition-5 waite-node" data-num="11">
 							<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span>
 								</div>
 							<div class="show-regin"><span>台州</span></div>
 						</div>
-							<div class="region-list active postition-6 online-node">
+							<div class="region-list active postition-6 online-node" data-num="4">
 							<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span></div>
 							<div class="show-regin"><span>杭州</span></div>
 						</div>
-						<div class="region-list active postition-7 online-node">
+						<div class="region-list active postition-7 online-node" data-num="8">
 							<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span></div>
 							<div class="show-regin"><span>哈尔滨</span></div>
 						</div>
-						<div class="region-list  active  postition-8 online-node">
+						<div class="region-list  active  postition-8 online-node" data-num="2">
 							<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span></div>
 							<div class="show-regin"><span>大庆</span></div>
 						</div>
-						<div class="region-list  active  postition-9 online-node" data-type="湘潭">
+						<div class="region-list  active  postition-9 online-node" data-num="10" data-type="湘潭">
 							<div class="area-box"><span class="dot"><img src="images/icons/marker1.png"></span></div>
 							<div class="show-regin"><span>湘潭</span></div>
 						</div>
 					</div>
 				</div>
-				<div class="content content1 my-color2 font2">业务概况</div>
+				<div class="content content1 my-color2 font3">业务概况</div>
 				<div class="content content2 inner count-box animated" data-my-animate="fadeInLeft"  data-wow-delay="0ms" data-wow-duration="1500ms">
-					<span class="count-text mytimer my-color2 font1" data-speed="6000" data-stop="11" >0</span>
+					<span class="count-text mytimer my-color2 font2" data-speed="6000" data-stop="11" >0</span>
 					<sapn class="space">家</sapn>
 					<span>全国工厂</span>
 				</div>
 				<div class="content content3 inner count-box animated" data-my-animate="fadeInLeft" data-wow-delay="600ms" data-wow-duration="1500ms">
-					<span class="count-text mytimer my-color2 font1" data-speed="6000" data-stop="4300" >0</span>
-					<span class="my-color2 font1">+</span><span class="space">名</span>
+					<span class="count-text mytimer my-color2 font2" data-speed="6000" data-stop="4300" >0</span>
+					<span class="my-color2 font2">+</span><span class="space">名</span>
 					<span class="counter-title">员工人数</span>
 				</div>
 				<div class="content content4 inner count-box animated" data-my-animate="fadeInLeft" data-wow-delay="900ms" data-wow-duration="1500ms">
-					<span class="count-text mytimer my-color2 font1" data-speed="8000" data-stop="50" >0</span>
+					<span class="count-text mytimer my-color2 font2" data-speed="8000" data-stop="50" >0</span>
 					<span class="space">亿元</span>
 					<span class="counter-title" >2018年销售额</span>
 				</div>
