--- a/news.html
+++ b/news.html
@@ -230,6 +230,7 @@
 <!--End Master Slider -->
 
 <script src="js/script.js"></script>
+<script src="my-js/news.js"></script>
 <script type="text/javascript">
     $('.news-list .item-box').click(function(){
         window.location.href = 'news-detail.html';
