--- a/culture.html
+++ b/culture.html
@@ -156,6 +156,7 @@
 }
 .section4 .item2 .cont1{
 	flex: 4;
+	text-align: center;
 }
 .section4 .item2 .cont2{
 	flex: 6;
@@ -270,6 +271,12 @@
 .section7 .item-box .content-box{
 	display: none;
 	text-align: center;
+}
+.section7 .item-box .content-box>div{
+	width: 90%;
+}
+.section7 .item-box .content-box .cont2{
+	text-align: left;
 }
 .section7 .icon3{
 	position: absolute;
@@ -418,13 +425,19 @@
 				<div class="item item2"><img src="images/culture/3-8.jpg"></div>
 				<div class="content-box my-bg-color5 animated">
 					<div class="text-box">
-						<div class="title-text">
+						<!-- <div class="title-text">
 							<span>愿景周</span>
 							<span class="time"> 每年6月</span>
 						</div>
 						<div class="cont-text">2000年以来，CQYFAS每年推出一个主题。每年6月，通过长达一周时间的各种活动向员工更进一步阐释重庆延锋安道拓的价值观、愿景，
 							旨在加强员工对公司取得持续成功至关重要因素的认知和理解。为此我们称为“愿景周”。
-						</div>
+						</div> -->
+						<div class="title-text">
+								<span>星耀盛典</span>
+							</div>
+							<div class="cont-text">从2014年开始，重庆延锋安道拓开始举办独立的年度奖项颁奖典礼。
+								我们鼓励个人、团队积极推选符合奖项的 候选人，号召艾小渝们不断探索真知、追求卓越。
+							</div>
 					</div>
 				</div>
 			</div>
@@ -447,9 +460,12 @@
 					</a>
 				</div>
 				<div class="item-box item2 my-bg-color3">
-					<div class="cont1"><img src="images/culture/4-3.jpg"></div>
+					<div class="cont1">
+						<img src="images/culture/4-3.jpg">
+						<div>此书献给正在为梦想而奋斗的您！</div>
+					</div>
 					<div class="animated-text cont2 text-box animated wow fadeInRight">
-						<div>《文化的力量》献给亲爱的伙伴，学习传承，奔向未来；</div>
+						<!-- <div>《文化的力量》献给亲爱的伙伴，学习传承，奔向未来；</div>
 						<div>《文化的力量》献给出色的同行，交流分享，一路向前；</div>
 						<div>《文化的力量》献给尊敬的朋友，投砾引珠，广征博引；</div>
 						<div>《文化的力量》献给我们的下一代，回馈社会，助力公益。</div>
@@ -458,8 +474,21 @@
 							为共同走过的时光、彼此见证的过往，亲手打造的一份弥足珍贵的成长纪念。
 							第一版印刷的4000册将进行爱心认购，所得款项全部进入蓝天基金。
 							用来支持环境的可持续发展，社会服务，教育事业等公益之举！
-						</p>
-					</div>
+						</div> -->
+						<div>《文化的力量》于2018年6月28日正式发行。</div>
+						<div style="text-indent:25px;margin:5px 0;">此书由重庆延锋安道拓公司所有同仁，用血浓于水的感情共同写就。
+							这是一个企业对自己的锤炼，更是一群骨子里永远都热血的人，
+							为共同走过的时光、彼此见证的过往，亲手打造的一份弥足珍贵的成长纪念。</div>
+						<div>《文化的力量》献给亲爱的伙伴，学习传承，奔向未来；
+							</div>
+						<div>《文化的力量》献给出色的同行，交流分享，一路向前；</div>
+						<div>《文化的力量》献给尊敬的朋友，投砾引珠，广征博引；
+							</div>
+						<div>《文化的力量》献给我们的下一代，回馈社会，助力公益。
+							</div>
+						<div style="margin-top:5px">《文化的力量》第一版印刷的4000册将进行爱心认购，所得款项全部进入蓝天基金。用来支持环境的可持续发展，
+								社会服务，教育事业等公益之举！
+								</div>
 				</div>
 			</div>
 		</div>
@@ -533,45 +562,59 @@
 			<div class="item-box item1">
 				<img src="images/culture/7-1.jpg">
 				<div class="content-box my-bg-color5 animated">
-					<div class="my-all-center">
-						<div>大学生领导力挑战赛</div>
-						<div>查看详情</div>
+					<div class="my-all-center cont-box">
+						<div class="cont1">大学生领导力挑战赛</div>
+						<marquee class="cont2" behavior="scroll" direction="up"  loop="-1" scrollamount="0" scrolldelay="100">
+							蓝天计划将学校作为目标社区开展以环保、大学生领导力为主题的系列校园活动。
+							通过一系列高质量、高要求的团队挑战，锻炼当代大学生的领导能力、培养社会责任意识、宣传环保理念。
+						</marquee>
 					</div>
 				</div>
 			</div>
 			<div class="item-box item2">
 				<img src="images/culture/7-2.jpg">
 				<div class="content-box my-bg-color5 animated">
-						<div class="my-all-center">
-							<div>大学生领导力挑战赛</div>
-							<div>查看详情</div>
+						<div class="my-all-center cont-box">
+							<div class="cont1">校企开放日</div>
+							<marquee class="cont2" behavior="scroll" direction="up"  loop="-1" scrollamount="0" scrolldelay="100">
+								我们邀请“大学生领导力挑战赛”获胜的所有队伍前往重庆延锋安道拓，
+								展示其获奖作品，参观公司及本地工厂，进行深入的校企参访交流。
+							</marquee>
 						</div>
 					</div>
 			</div>
 			<div class="item-box item3">
 				<img src="images/culture/7-3.jpg">
 				<div class="content-box my-bg-color5 animated">
-						<div class="my-all-center">
-							<div>大学生领导力挑战赛</div>
-							<div>查看详情</div>
+						<div class="my-all-center cont-box">
+							<div class="cont1">为爱奔跑</div>
+							<marquee class="cont2" behavior="scroll" direction="up"  loop="-1" scrollamount="0" scrolldelay="100">
+									“为爱奔跑”8 小时接力公益赛起源于2014 年，是一次用“公益、自助、环保”贯穿前期训练、活动筹备、比赛全程的赛事。
+									本次活动秉承着自愿捐赠的原则，最终您的每一步，公司捐助的每一笔赞助金，我们都将用于后期资助学校的修建和贫困小孩的帮扶等爱心活动。
+							</marquee>
 						</div>
 					</div>
 			</div>
 			<div class="item-box item4">
 				<img src="images/culture/7-4.jpg">
 				<div class="content-box my-bg-color5 animated">
-						<div class="my-all-center">
-							<div>大学生领导力挑战赛</div>
-							<div>查看详情</div>
+						<div class="my-all-center cont-box">
+							<div class="cont1">酉阳二中关爱助学</div>
+							<marquee class="cont2" behavior="scroll" direction="up"  loop="-1" scrollamount="0" scrolldelay="100">
+								杉树公益联合重庆延锋安道拓蓝天基金在重庆酉阳二中共同设立“杉树班”。2017年起延锋安道拓每年组建30人志愿者队伍，
+								为80位“双特”（特别贫困、特别优秀）生进行一对一帮扶，并为每位学生募捐三年生活费9000元，共计募捐72万元。
+							</marquee>
 						</div>
 					</div>
 			</div>
 			<div class="item-box item5">
 				<img src="images/culture/7-5.jpg">
 				<div class="content-box my-bg-color5 animated">
-						<div class="my-all-center">
-							<div>大学生领导力挑战赛</div>
-							<div>查看详情</div>
+						<div class="my-all-center cont-box">
+							<div class="cont1">工厂蓝天计划</div>
+							<marquee class="cont2" behavior="scroll" direction="up"  loop="-1" scrollamount="0" scrolldelay="100">
+								每年重庆延锋安道拓各分子公司均自行组织志愿者参与蓝天计划，积极投身于社会环保、助学帮扶等公益项目中。
+							</marquee>
 						</div>
 					</div>
 			</div>
