--- a/common/footer-en.html
+++ b/common/footer-en.html
@@ -34,10 +34,10 @@
 								<div class="column col-lg-2 col-md-6 col-sm-6">
 								<h2>Career</h2>
 									<ul class="footer-link">
-										<li><a href="profession-en.html">工作机会</a></li>
-										<li><a href="profession-en.html">员工发展</a></li>
-										<li><a href="profession-en.html">员工关怀</a></li>
-										<li><a href="profession-en.html?item=3">办公环境</a></li>
+										<li><a href="profession.html?item=1">雇主品牌</a></li>
+										<li><a href="profession.html?item=2">工作机会</a></li>
+										<li><a href="profession.html?item=4">员工发展</a></li>
+										<li><a href="profession.html?item=8">工作体验</a></li>
 									</ul>
 								</div>
 								<div class="column col-lg-2 col-md-6 col-sm-6">
