--- a/culture.html
+++ b/culture.html
@@ -75,19 +75,19 @@
 .section2 .content3 .txt{
 	position: absolute;
 	font-size: 12px;
-	top: 45%;
+	top: 46.5%;
 }
 .section2 .content3 .txt1{
-	left: 30%;
+	left: 31%;
 }
 .section2 .content3 .txt2{
-	left: 45%;
+	left: 46.5%;
 }
 .section2 .content3 .txt3{
-	left: 61%;
+	left: 62%;
 }
 .section2 .content3 .txt4{
-	left: 77%;
+	left: 78%;
 }
 .section2 .content3 .txt5{
 	top: 30%;
@@ -152,14 +152,20 @@
 .section4 .item2{
 	display: flex;
 	align-items: center;
+	justify-content: center;
 	padding-left: 5px;
 }
 .section4 .item2 .cont1{
-	flex: 4;
+	position: relative;
+	width: 40%;
+	max-height: 100%;
 	text-align: center;
 }
+.section4 .item2 .cont1 img{
+	width: 100%;
+}
 .section4 .item2 .cont2{
-	flex: 6;
+	width: 60%;
 	padding: 0 15px;
 	transition: 1s ease-in-out;
 }
@@ -326,7 +332,7 @@
 		<div class="content-box">
 			<div class="content text-center wow fadeInLeft animated">
 				<h2 class="text-box">
-					<div>幸福</div>
+					<div class="my-color2">幸福</div>
 					<font class="my-color5" style="font-weight: 600">是奋斗出来的</font>
 				</h2>
 			</div>
@@ -355,13 +361,13 @@
 			<div class="content content3">
 				<div class="wow fadeInRight ani-time2" style="height: 100%">
 					<img src="images/culture/2-3.png">
-					<div class="content-box">
+					<!-- <div class="content-box">
 						<div class="txt txt1">共识</div>
 						<div class="txt txt2">共担</div>
 						<div class="txt txt3">共创</div>
 						<div class="txt txt4">共享</div>
 						<div class="txt txt5">文化升级</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
@@ -462,10 +468,10 @@
 				<div class="item-box item2 my-bg-color3">
 					<div class="cont1">
 						<img src="images/culture/4-3.jpg">
-						<div>此书献给正在为梦想而奋斗的您！</div>
+						<!-- <div>此书献给正在为梦想而奋斗的您！</div>-->
 					</div>
 					<div class="animated-text cont2 text-box animated wow fadeInRight">
-						<!-- <div>《文化的力量》献给亲爱的伙伴，学习传承，奔向未来；</div>
+						 <div>《文化的力量》献给亲爱的伙伴，学习传承，奔向未来；</div>
 						<div>《文化的力量》献给出色的同行，交流分享，一路向前；</div>
 						<div>《文化的力量》献给尊敬的朋友，投砾引珠，广征博引；</div>
 						<div>《文化的力量》献给我们的下一代，回馈社会，助力公益。</div>
@@ -474,7 +480,8 @@
 							为共同走过的时光、彼此见证的过往，亲手打造的一份弥足珍贵的成长纪念。
 							第一版印刷的4000册将进行爱心认购，所得款项全部进入蓝天基金。
 							用来支持环境的可持续发展，社会服务，教育事业等公益之举！
-						</div> -->
+						</div> 
+						<!--
 						<div>《文化的力量》于2018年6月28日正式发行。</div>
 						<div style="text-indent:25px;margin:5px 0;">此书由重庆延锋安道拓公司所有同仁，用血浓于水的感情共同写就。
 							这是一个企业对自己的锤炼，更是一群骨子里永远都热血的人，
@@ -489,6 +496,7 @@
 						<div style="margin-top:5px">《文化的力量》第一版印刷的4000册将进行爱心认购，所得款项全部进入蓝天基金。用来支持环境的可持续发展，
 								社会服务，教育事业等公益之举！
 								</div>
+						-->
 				</div>
 			</div>
 		</div>
@@ -514,10 +522,13 @@
 							我们更加关怀环境保护和社会责任。因此，基于环保、社区责任和员工领导力三重底线的蓝天计划应运而生。
 					</div>
 					<div class="cont-text2">
-						<div>///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////</div>
-						<div>///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////</div>
-						<div>///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////</div>
-						<div>///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////</div>
+						<!--<div >· · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · · ·</div>
+						<div >------------------------------------------------------------------------------------------------------------------------ </div>
+						
+						<div >________________________________________________________________________________________________________________________</div>
+						<div >________________________________________________________________________________________________________________________</div>
+						<div >________________________________________________________________________________________________________________________ </div>
+						-->
 					</div>
 				</div>
 			</div>
