--- a/index.html
+++ b/index.html
@@ -151,6 +151,17 @@
 	width: 33.3333%;
 	position: relative;
 }
+.slide6 .item-box .cont-box{
+	position: absolute;
+    bottom: 0px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+    height: 30px;
+    line-height: 30px;
+	display: none;
+}
 .slide6 .item1{
 	font-size: 28px;
 	font-weight: 600;
@@ -334,18 +345,23 @@
 					</div>
 					<div class="item-box animated" data-my-animate="fadeInLeft">
 						<img src="images/index/6-1.jpg">
+						<div class="cont-box my-bg-color5 animated">为爱奔跑</div>
 					</div>
 					<div class="item-box animated" data-my-animate="fadeInLeft">
 						<img src="images/index/6-2.jpg">
+						<div class="cont-box my-bg-color5 animated">春晚</div>
 					</div>
 					<div class="item-box animated" data-my-animate="fadeInRight">
 						<img src="images/index/6-3.jpg">
+						<div class="cont-box my-bg-color5 animated">家属日</div>
 					</div>
 					<div class="item-box animated" data-my-animate="fadeInRight">
 						<img src="images/index/6-4.jpg">
+						<div class="cont-box my-bg-color5 animated">酉阳二中关爱助学</div>
 					</div>
 					<div class="item-box animated" data-my-animate="fadeInRight">
 						<img src="images/index/6-5.jpg">
+						<div class="cont-box my-bg-color5 animated">15周年庆</div>
 					</div>
 				</div>
 			</div>
