--- a/profession.html
+++ b/profession.html
@@ -331,6 +331,9 @@
 .section7 .content2 .cont4 img{
 	display: block;
 }
+#college-box{
+	font-size: 13px;
+}
 #college-box .item-box{
 	width: 20%;
 	position: relative;
@@ -368,6 +371,18 @@
 }
 .section8 .content{
 	/* width: 49.9%; */
+	position: relative;
+}
+.section8 .cont-box{
+	position: absolute;
+    bottom: 0px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+    height: 30px;
+    line-height: 30px;
+	display: none;
 }
 
 </style>
@@ -415,16 +430,22 @@
 				<div class="my-column-center">
 					<div class="cont1"><span class="my-bg-color2">校园招聘</span></div>
 					<div class="cont2">座拥青春 椅靠未来</div>
-					<div class="cont3">我们每年持续开展校园招聘，校园人才成为五分之一的组织血液；</div>
-					<div class="cont4">我们为您提供高速成长的土壤，为您的初心创造平台，成就您的职业梦想。</div>
+					<div class="cont3">我们每年持续开展校园招聘，</div>
+					<div class="cont3">校园人才成为五分之一的组织血液；</div>
+					<div class="cont4">我们为您提供高速成长的土壤，</div>
+					<div class="cont4">为您的初心创造平台，</div>
+					<div class="cont4">成就您的职业梦想。</div>
 				</div>
 			</div>
 			<div class="content content2  wow fadeInRight ani-time2">
 				<div class="my-column-center">
 					<div class="cont1"><span class="my-bg-color2">社会招聘</span></div>
 					<div class="cont2">因为有你 卓越未来</div>
-					<div class="cont3">我们一直秉承任人唯贤的价值观，寻求敢于创新、追求卓越、不断突破的优质人才；</div>
-					<div class="cont4">我们倡导同创共享的奋斗者文化，我们是爱学习、爱奋斗、爱创新、爱生活的艾小渝；</div>
+					<div class="cont3">我们一直秉承任人唯贤的价值观，寻求敢于</div>
+					<div class="cont3">创新、追求卓越、不断突破的优质人才；</div>
+					<div class="cont4">我们倡导同创共享的奋斗者文化，</div>
+					<div class="cont4">我们是爱学习、爱奋斗、爱创新、</div>
+					<div class="cont4">爱生活的艾小渝；</div>
 				</div>
 			</div>
 		</div>
@@ -461,11 +482,11 @@
 					</div>
 					<div class="slide">
 						<img src="images/profession/5-2.jpg">
-						<div class="cont1 my-color5">干中学</div>
+						<div class="cont1 my-color5">承担责任</div>
 					</div>
 					<div class="slide">
 						<img src="images/profession/5-3.jpg">
-						<div class="cont1 my-color5">干中学</div>
+						<div class="cont1 my-color5">寻求支持</div>
 					</div>
 				</div>
 			</div>
@@ -507,7 +528,7 @@
 			</div>
 		</div>
 		<div class="content content2">
-			<div class="cont cont1 wow fadeInDown100 ani-time3"><img src="images/profession/icon6-5.png"></div>
+			<div class="cont cont1 wow fadeInUp ani-time3"><img src="images/profession/icon6-5.png"></div>
 			<div class="cont cont2 wow fadeInRight ani-time3">
 				<div class="cont-text1 font1 my-color5">员工发展通路</div>
 				<div class="cont-text2">在重庆延锋安道拓，员工的职业发展主要通过三条通路实现：
@@ -652,16 +673,34 @@
 	<section class="main-slider welcome-section section8 my-color1" data-item="8" style="padding:0">
 			<div class="my-slider-carousel owl-carousel owl-theme">
 				<div class="slide">
-					<div class="content wow fadeInUp100"><img src="images/profession/8-1.jpg"></div>
+					<div class="content wow fadeInUp100">
+						<img src="images/profession/8-1.jpg">
+						<div class="cont-box my-bg-color5 animated">大厅一角</div>
+					</div>
 				</div>
 				<div class="slide">
-					<div class="content wow fadeInUp100"><img src="images/profession/8-2.jpg"></div>
+					<div class="content wow fadeInUp100">
+						<img src="images/profession/8-2.jpg">
+						<div class="cont-box my-bg-color5 animated">休闲区</div>
+					</div>
 				</div>
 				<div class="slide">
-					<div class="content wow fadeInUp100"><img src="images/profession/8-3.jpg"></div>
+					<div class="content wow fadeInUp100">
+						<img src="images/profession/8-3.jpg">
+						<div class="cont-box my-bg-color5 animated">健身房</div>
+					</div>
 				</div>
 				<div class="slide">
-					<div class="content wow fadeInUp100"><img src="images/profession/8-4.jpg"></div>
+					<div class="content wow fadeInUp100">
+						<img src="images/profession/8-4.jpg">
+						<div class="cont-box my-bg-color5 animated">咖啡吧</div>
+					</div>
+				</div>
+				<div class="slide">
+					<div class="content wow fadeInUp100">
+						<img src="images/profession/8-5.jpg">
+						<div class="cont-box my-bg-color5 animated">餐厅</div>
+					</div>
 				</div>
 			</div>
 	</section>
