--- a/technology-en.html
+++ b/technology-en.html
@@ -472,6 +472,7 @@
 							<span>>10位座椅设计专家</span>
 							<span>>10年平均工作经验</span>
 							<span>>5.8年平均座椅行业工作经验</span>
+							<span>>我们拥有完整的座椅设计开发能力，以技术创新支持业务运营</span>
 						</div>
 						
 						<!-- <div class="cont3 text-color2">
