--- a/about-en.html
+++ b/about-en.html
@@ -111,6 +111,14 @@
 	display: flex;
 	align-items: center;
 }
+.slide2 .split{
+	display: inline-block;
+    width: 3px;
+    height: 3px;
+    background-color: #fff;
+    border-radius: 3px;
+    margin: 0 5px;
+}
 </style>
 </head>
 
