--- a/common/header-en.html
+++ b/common/header-en.html
@@ -52,10 +52,10 @@
                                     <li class="dropdown" data-type="profession">
                                         <a href="profession-en.html">Career</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="profession-en.html">工作机会</a></li>
-                                            <li><a href="profession-en.html">员工发展</a></li>
-                                            <li><a href="profession-en.html">员工关怀</a></li>
-                                            <li><a href="profession-en.html?item=3">办公环境</a></li>
+                                            <li><a href="profession.html?item=1">雇主品牌</a></li>
+										<li><a href="profession.html?item=2">工作机会</a></li>
+										<li><a href="profession.html?item=4">员工发展</a></li>
+										<li><a href="profession.html?item=8">工作体验</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown" data-type="culture">
