--- a/common/header.html
+++ b/common/header.html
@@ -51,8 +51,8 @@
 										<li><a href="profession.html?item=1">雇主品牌</a></li>
 										<li><a href="profession.html?item=2">工作机会</a></li>
 										<li><a href="profession.html?item=4">员工发展</a></li>
-										<li><a href="profession.html?item=8">员工关怀</a></li>
-										<li><a href="profession.html?item=8">办公环境</a></li>
+										<li><a href="profession.html?item=8">工作体验</a></li>
+										
 									</ul>
 								</li>
 								<li class="dropdown" data-type="culture">
