--- a/technology.html
+++ b/technology.html
@@ -125,10 +125,12 @@
 	background: rgba(190, 213, 51, 0.8);
 	color: #fff;
 	display: none;
+	height: 17%;
+	top: 85%;
 }
 .slide2 .right-box .content-box span{
 	position: absolute;
-    bottom: 40px;
+    bottom: 10px;
     text-align: center;
     left: 0;
 	width: 100%;
@@ -472,6 +474,8 @@
 							<span>>10位座椅设计专家</span>
 							<span>>10年平均工作经验</span>
 							<span>>5.8年平均座椅行业工作经验</span>
+							<span>>我们拥有完整的座椅设计开发能力，以技术创新支持业务运营</span>
+							
 						</div>
 						
 						<!-- <div class="cont3 text-color2">
