--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 	background-color: #044557;
 }
 .china-map{
-	margin-left: 14%;
+	margin-left: 35%;
     width: 40%;
     top: 50%;
     transform:translateY(-50%);
@@ -52,7 +52,7 @@
 }
 #map .content-box{
 	width: 20%;
-	left: 60%;
+	left: 75%;
 }
 #map .row{
 	height: 100%;
@@ -73,10 +73,11 @@
 	align-items: center;
 	text-align: center;
 	z-index: 100;
-	display: none;
+	display: block;
+	width: 350px;
 }
 .current-info img{
-	width: 350px;
+	width: 100%;
 }
 
 .slide2 .content{
@@ -350,7 +351,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="key-block" style="margin-bottom:0px;visibility: hidden;">
+										<div class="key-block" style="margin-bottom:0px;height: 86px;opacity: 0;">
 											<div class="inner-box">
 												<div class="icon-box"></div>
 												<div class="content">
@@ -360,53 +361,6 @@
 											</div>
 										</div>
 									</div>
-									<div class="slide">
-											<div class="key-block" style="margin-bottom:0px;">
-												<div class="inner-box box1">
-													<div class="icon-box"></div>
-													<div class="content">
-														<h3 style="color:rgba(191,215,50,1)">2003年</h3>
-														<div class="text">江森自控、延锋江森、博奥集团正式签定三方合资协议，成立合资公司重庆延锋江森。</div>
-													</div>
-												</div>
-											</div>
-											<div class="key-block" style="margin-bottom:0px">
-												<div class="inner-box">
-													<div class="icon-box"></div>
-													<div class="content">
-														<h3 style="color:rgba(191,215,50,1)">2004年</h3>
-														<div class="text">搬迁至渝北工厂，第一个项目福特CD132正式投产。</div>
-													</div>
-												</div>
-											</div>
-											<div class="key-block" style="margin-bottom:0px">
-												<div class="inner-box">
-													<div class="icon-box"></div>
-													<div class="content">
-														<h3 style="color:rgba(191,215,50,1)">2006年</h3>
-														<div class="text">铃木工区正式投产，重庆延锋江森荣获“重庆市高新技术企业称号”。</div>
-													</div>
-												</div>
-											</div>
-											<div class="key-block">
-												<div class="inner-box">
-													<div class="icon-box"></div>
-													<div class="content">
-														<h3 style="color:rgba(191,215,50,1)">2007年</h3>
-														<div class="text">举办第一届家属日活动，启动公益项目蓝天计划。</div>
-													</div>
-												</div>
-											</div>
-											<div class="key-block" style="margin-bottom:0px">
-												<div class="inner-box">
-													<div class="icon-box"></div>
-													<div class="content">
-														<h3 style="color:rgba(191,215,50,1)">2010年</h3>
-														<div class="text">公司年销售额首次突破10亿元，技术中心获得第一项技术专利。</div>
-													</div>
-												</div>
-											</div>
-										</div>
 								</div>
 							</div>
 						</div>
@@ -503,8 +457,8 @@
 							</div>
 					</div>
 					<div class="current-info">
-						<img class="current-img" src="images/about/cd.png">
-						<h5 class="current-text">重庆工厂</h5>
+						<img class="current-img" src="images/about/cq-yf.png">
+						<h5 class="current-text">重庆延锋安道拓汽车部件系统有限公司</h5>
 					</div>
 			</div>
 			<!--第5屏-->
