--- a/index.html
+++ b/index.html
@@ -146,9 +146,11 @@
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
+	height: 100%;
 }
 .slide6 .item-box{
 	width: 33.3333%;
+	max-height: 50%;
 	position: relative;
 }
 .slide6 .item-box .cont-box{
@@ -158,8 +160,8 @@
     width: 100%;
     text-align: center;
     font-size: 18px;
-    height: 30px;
-    line-height: 30px;
+    height: 50px;
+    line-height: 50px;
 	display: none;
 }
 .slide6 .item1{
