--- a/common/footer.html
+++ b/common/footer.html
@@ -26,7 +26,7 @@
 								<div class="column col-lg-2 col-md-6 col-sm-6">
 								<h2>技术能力</h2>
 									<ul class="footer-link">
-										<li><a href="technology.html?item=1">创新开发</a></li>
+										<li><a href="technology.html?item=1">创新研发</a></li>
 										<li><a href="technology.html?item=5">技术中心</a></li>
 										<li><a href="technology.html?item=6">制造能力</a></li>
 									</ul>
@@ -88,8 +88,8 @@
 					<div class="footer-cont1 column">
 						<div class="logo">
 							<a href="#"><img src="images/logo.png" alt="" /></a>
-							<a href="https://www.yanfengadient.com/"><img src="images/logo2.png" alt="" /></a>	
 							<a href="https://www.adient.com"><img src="images/logo1.png" alt="" /></a>	
+							<a href="https://www.yanfengadient.com/"><img src="images/logo2.png" alt="" /></a>	
 						</div>
 						<div class="footer-right">
 							<div class="copyright">© 2018 Adient plc. All Rights Reserved
