--- a/culture.html
+++ b/culture.html
@@ -468,7 +468,7 @@
 			<div class="content">
 				<div class="item-box item1">
 					<a href="video/whll.mp4" class="lightbox-image play-box">
-						<img src="images/culture/4-2.jpg">
+						<img class="bg-img" src="images/culture/4-2.jpg">
 						<div class="my-all-center my-color2" style="margin-top: -60px;font-size:18px">此片献给正在为梦想而奋斗的您</div>
 						<img class="my-all-center icon-play" src="images/icons/play.png">
 					</a>
