--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
 	max-height: 50%;
 	position: relative;
 }
+.slide6 .item-box>img{
+	height: 100%;
+	width: 100%;
+}
 .slide6 .item-box .cont-box{
 	position: absolute;
     bottom: 0px;
