--- a/common/header.html
+++ b/common/header.html
@@ -40,7 +40,7 @@
 								<li class="dropdown" data-type="technology">
 									<a href="technology.html">技术能力</a>
 									<ul class="dropdown-menu">
-										<li><a href="technology.html?item=1">创新开发</a></li>
+										<li><a href="technology.html?item=1">创新研发</a></li>
 										<li><a href="technology.html?item=5">技术中心</a></li>
 										<li><a href="technology.html?item=6">制造能力</a></li>
 									</ul>
@@ -117,7 +117,7 @@
 								<li class="dropdown" data-type="technology">
 									<a href="technology.html">技术能力</a>
 									<ul class="dropdown-menu">
-										<li><a href="technology.html?item=1">创新开发</a></li>
+										<li><a href="technology.html?item=1">创新研发</a></li>
 										<li><a href="technology.html?item=5">技术中心</a></li>
 										<li><a href="technology.html?item=6">制造能力</a></li>
 									</ul>
