--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 					</div>
 					<div class="item-box animated" data-my-animate="fadeInRight">
 						<img src="images/index/6-4.jpg">
-						<div class="cont-box my-bg-color5 animated">酉阳二中关爱助学</div>
+						<div class="cont-box my-bg-color5 animated">关爱助学</div>
 					</div>
 					<div class="item-box animated" data-my-animate="fadeInRight">
 						<img src="images/index/6-5.jpg">
