--- a/profession.html
+++ b/profession.html
@@ -675,7 +675,7 @@
 				<div class="slide">
 					<div class="content wow fadeInUp100">
 						<img src="images/profession/8-1.jpg">
-						<div class="cont-box my-bg-color5 animated">大厅一角</div>
+						<div class="cont-box my-bg-color5 animated">办公一角</div>
 					</div>
 				</div>
 				<div class="slide">
