--- a/culture.html
+++ b/culture.html
@@ -56,12 +56,19 @@
 	font-weight: 600;
 }
 .section2 .cont2{
-	font-size: 22px;
-	margin-top: 5px;
+	font-size: 20px;
+	margin-top: 15px;
+	text-align: center;
 }
 .section2 .content1,
 .section2 .content2{
 	width: 50%;
+}
+.section2 .content1>div{
+	left: 25%;
+}
+.section2 .content2>div{
+	right: 25%;
 }
 .section2 .content2 {
 	text-align: right;
@@ -172,10 +179,10 @@
 	width: 100%;
 }
 .section4 .item2 .cont2{
-	width: 55%;
+	width: 54%;
 	height: 100%;
     position: absolute;
-    left: 44.5%;
+    left: 44%;
     top: 0;
 	font-size: 14px;
 	transition: 1s ease-in-out;
@@ -357,7 +364,7 @@
 		<div class="row clearfix">
 			<div class="content content1">
 				<img src="images/culture/2-1.jpg">
-				<div class="my-all-center">
+				<div class="my-column-center">
 					<div class="wow fadeInRight">
 						<span class="cont1 font1"><font>幸福家文化</font></span>
 						<div class="cont2">土壤</div>
@@ -366,7 +373,7 @@
 			</div>
 			<div class="content content2">
 				<img src="images/culture/2-2.jpg">
-				<div class="my-all-center" style="margin-left: 30px">
+				<div class="my-column-center" style="margin-left: 30px">
 					<div class=" wow fadeInRight ani-time3">
 						<span class="cont1">同创共享的<font class="font1">奋斗者文化</font></span>
 						<div class="cont2">根基</div>
@@ -484,15 +491,16 @@
 					<img class="bg-img" src="images/culture/4-3.jpg">
 					<div class="animated-text cont2 text-box animated wow fadeInRight">
 						<div>
-							<div>《文化的力量》献给亲爱的伙伴，学习传承，奔向未来；</div>
-							<div>《文化的力量》献给出色的同行，交流分享，一路向前；</div>
-							<div>《文化的力量》献给尊敬的朋友，投砾引珠，广征博引；</div>
-							<div>《文化的力量》献给我们的下一代，回馈社会，助力公益。</div>
-							<div style="margin-top: 10px">此书由重庆延锋安道拓公司所有同仁，用血浓于水的感情共同写就。
-								这是一个企业对自己的锤炼，更是一群骨子里永远都热血的人，
-								为共同走过的时光、彼此见证的过往，亲手打造的一份弥足珍贵的成长纪念。
-								第一版印刷的4000册将进行爱心认购，所得款项全部进入蓝天基金。
-								用来支持环境的可持续发展，社会服务，教育事业等公益之举！
+							<div>《文化的力量》献给亲爱的伙伴,学习传承,奔向未来;</div>
+							<div>《文化的力量》献给出色的同行,交流分享,一路向前;</div>
+							<div>《文化的力量》献给尊敬的朋友,投砾引珠,广征博引;</div>
+							<div>《文化的力量》献给我们的下一代,回馈社会,助力公益。</div>
+							<div style="margin-top: 15px;text-indent: 2em;padding-left: 5px;
+							text-align: justify;">此书由重庆延锋安道拓公司所有同仁,用血浓于水的感情共同写就。
+								这是一个企业对自己的锤炼,更是一群骨子里永远都热血的人,
+								为共同走过的时光、彼此见证的过往,亲手打造的一份弥足珍贵的成长纪念。
+								第一版印刷的4000册将进行爱心认购,所得款项全部进入蓝天基金。
+								用来支持环境的可持续发展,社会服务,教育事业等公益之举!
 							</div> 
 						</div>
 					</div>
