--- a/index.html
+++ b/index.html
@@ -199,24 +199,24 @@
 				<div id="first-slide-swiper" class="swiper-container">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
-							<img class="slide-bg" src="images/main-slider/image-1.jpg">
-							<div class="content-box animated" data-my-animate="fadeInLeft">
-								<div class="content text-center">
-									<h2 class="my-color2"><div>提升<strong>机动化世界</strong></span></div><font>的体验</font></h2>
-								</div>
-							</div>
+							<img class="slide-bg" src="images/index/image-1.jpg">
 						</div>
-						<!-- <div class="swiper-slide">
-							<img class="slide-bg" src="images/main-slider/image-1.jpg">
-							<div class="content-box">
-								<div class="content text-center">
-									<h2><div class="my-color2">提升机动化世界</div><font>的体验</font></h2>
-								</div>
-								<a href="news.html" class="my-color1"><div class="my-row-center news-center">新闻中心</div></a>
-							</div>
-						</div> -->
+						<div class="swiper-slide">
+							<img class="slide-bg" src="images/index/image-2.jpg">
+						</div>
+						<div class="swiper-slide">
+							<img class="slide-bg" src="images/index/image-3.jpg">
+						</div>
+						<div class="swiper-slide">
+							<img class="slide-bg" src="images/index/image-4.jpg">
+						</div>
 					</div>
 				</div>
+				<div class="content-box animated" data-my-animate="fadeInLeft" style="z-index:1">
+						<div class="content text-center">
+							<h2 class="my-color2"><div>提升<strong>机动化世界</strong></span></div><font>的体验</font></h2>
+						</div>
+					</div>
 			</div>
 			<!--第2屏-->
 			<div class="swiper-slide slide2">
