--- a/common/header.html
+++ b/common/header.html
@@ -151,10 +151,10 @@
 										<li><a href="about.html?item=5">合作伙伴</a></li>
 									</ul>
 								</li>
-								<li class="language-box">
+								<!-- <li class="language-box">
 									<span class="language active" type="ch">中</span>
 									<span class="language" type="en">EN</span>
-								</li>
+								</li> -->
 						</ul>
 					</div>
 				</nav><!-- Main Menu End-->
