添加回到顶部的按钮

--- a/culture.html
+++ b/culture.html
@@ -345,7 +345,7 @@
 
 
 <div class="page-wrapper" id="culture">
- 	
+	<div class="go-top"><img src="images/icons/go-top.png" /></div>
     <!-- Preloader -->
     <div class="preloader"></div>
 
