--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 <!--End Main Header -->
 <div class="page-wrapper" id="index">
 	
- 	
+	<div class="go-top"><img src="images/icons/go-top.png" /></div>
     <!-- Preloader -->
     <div class="preloader"></div>
 	<div id="index-swiper" class="swiper-container my-color1">
@@ -385,9 +385,8 @@
 				<div id="footerBox"></div>
 			</div>
 		</div>
+		
 	</div>
-	
-	
 
 	
 	
