--- a/news.html
+++ b/news.html
@@ -102,7 +102,7 @@
 <!--End Main Header -->
 <div class="page-wrapper" id="index">
 	
- 	
+    <div class="go-top"><img src="images/icons/go-top.png" /></div>
     <!-- Preloader -->
     <div class="preloader"></div>
     <!--Main Slider-->
