--- a/profession.html
+++ b/profession.html
@@ -395,7 +395,7 @@
 <!--End Main Header -->
 
 <div class="page-wrapper" id="profession">
- 	
+	<div class="go-top"><img src="images/icons/go-top.png" /></div>
     <!-- Preloader -->
     <div class="preloader"></div>
 	<section class="welcome-section section1 my-color1" data-item="1" style="padding:0">
