--- a/technology.html
+++ b/technology.html
@@ -349,7 +349,7 @@
 <!--End Main Header -->
 
 <div class="page-wrapper" id="technology">
- 	
+	<div class="go-top"><img src="images/icons/go-top.png" /></div>
     <!-- Preloader -->
     <div class="preloader"></div>
 	<!--全屏滚动部分-->
