--- a/about.html
+++ b/about.html
@@ -180,7 +180,7 @@
 <!--End Main Header -->
 
 <div class="page-wrapper" id="about">
- 	
+	<div class="go-top"><img src="images/icons/go-top.png" /></div>
     <!-- Preloader -->
     <div class="preloader"></div>
  	
