--- a/product.html
+++ b/product.html
@@ -78,7 +78,7 @@
 <!--End Main Header -->
 
 <div class="page-wrapper" id="product">
- 	
+	<div class="go-top"><img src="images/icons/go-top.png" /></div> 	
     <!-- Preloader -->
     <div class="preloader"></div>
 	<div id="index-swiper" class="swiper-container my-color1">
